--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,14 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Home page{% endblock %}
+{% block title %} OAuth2 Test {% endblock %}
 
 {% block body %}
-
-    <div ref="words" data-words="{{ words|join(',') }}">
-
-    </div>
-
     <div id="app">
-        <app></app>
+        <app/>
     </div>
 {% endblock %}
