split app into two parts: backend and frontend

--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -1,6 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %} OAuth2 Test {% endblock %}
+{% extends 'base_frontend.html.twig' %}
 
 {% block body %}
     <div id="app">
