--- a/assets/backend/scss/app.scss
+++ b/assets/backend/scss/app.scss
@@ -1,5 +1,6 @@
 @import "~spectre.css";
 @import "~spectre.css/dist/spectre-icons.min.css";
+@import "../../common/scss/common";
 
 .login-wrapper {
   position: absolute;
